# Fritia_Online_NEXT

./: .gitignore  AGENTS.md  DESKTOP_PACKAGE.md  DEVELOP.md  README.md  UI_STYLE.md  index.html
css/: base.css  components.css  effects.css  panels.css  responsive.css  style.css
js/: achievements.js  advanced_settings.js  bar_guest_system.js  bar_performance.js  bar_scene.js  bartending_challenge.js  character.js  controls.js  dance_system.js  date_dialogue.js  dialogue.js  dream_furniture_factory.js  dream_llm.js  dream_system.js  game_state.js  gift_system.js  knowledge_base.js  main.js  room.js  room_panorama.js  roundtable_whispers.js  scene.js  settings.js  side_scroller_adventure.js  side_scroller_cards_llm.js  side_scroller_combat.js
package/: build-desktop-v0.9.2.ps1
package/templates/: electron-main.v0.9.2.js
package/templates/loader-v0.9.2/: Cargo.toml  build.rs  loader.rc
package/templates/loader-v0.9.2/src/: main.rs
src/: about.txt
src/_maps/bar/: RM.txt
