[package]
name = "fritia_portable_loader"
version = "0.9.2"
edition = "2021"
build = "build.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[dependencies]
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }
sha2 = "0.10.9"
hex = "0.4.3"

[dependencies.windows]
version = "0.62.2"
features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_GdiPlus",
  "Win32_System_LibraryLoader",
  "Win32_System_Threading",
  "Win32_UI_HiDpi",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Shell",
]